--- a/SonarVisualizer/package.json
+++ b/SonarVisualizer/package.json
@@ -6,11 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx jest src",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
+    "@testing-library/user-event": "^14.4.3",
+    "babel-jest": "^29.5.0",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-transform-stub": "^2.0.0",
     "svelte": "^3.55.1",
+    "svelte-jester": "^2.3.2",
     "vite": "^4.2.0"
   },
   "dependencies": {
