--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
   - npm install
 
 # we build the first job which configures dependencies on the Gitlab runner
-build-job:
+test-job:
   #we want the the docker runner to execute this as the image can be run on a docker runner only
   tags:
     - docker
