--- a/SonarVisualizer/package.json
+++ b/SonarVisualizer/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "svelte-canvas": "^0.9.3",
-    "u8-mqtt": "^0.3.2-0"
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "svelte-canvas": "^0.9.3"
   }
 }
