--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,7 @@ before_script:
 # run npm run build on the GUI to ensure that it compiles.
 build-job:
   # We want this job to be in a different stage as deployment is different from testing
-  stage:
-    - deploy
+  stage: deploy
   # we want the the docker runner to execute this as the image can be run on a docker runner only
   tags:
     - docker
@@ -38,8 +37,7 @@ build-job:
 # we build the first job which configures dependencies on the Gitlab runner
 test-job:
   # we want the the docker runner to execute this as the image can be run on a docker runner only
-  stage:
-    - test
+  stage: test
   tags:
     - docker
   # the commands of script are run on the Gitlab runner which works on Linux OS. We want to run the test files that have been written for the GUI
