#68 Deployment on VPS
changed apt to apt-get as the runner did not know apt.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
   
 # before building we need to install the dependencies on the runner and change directory to SonarVisualizer.
 before_script:
-  - apt install -y sshpass scp openssh-client
+  - apt-get install -y sshpass scp openssh-client
   - cd SonarVisualizer
   - npm install
 
