--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ stages:
   
 # before building we need to install the dependencies on the runner and change directory to SonarVisualizer.
 before_script:
-  - apt-get install -y sshpass scp openssh-client
+  - apk update
+  - apk add sshpass scp openssh-client
   - cd SonarVisualizer
   - npm install
 
