#68 Deployment on VPS
I had forgotten to add the word 'add' after the apk word.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ stages:
 before_script:
   - apk update
   - apk add sshpass
-  - apk openssh-client
-  - apk rsync
+  - apk add openssh-client
+  - apk add rsync
   - cd SonarVisualizer
   - npm install
 
