--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build-job:
   # the commands of script are run on the Gitlab runner which works on Linux OS. We want to run the test files that have been written for the GUI
   script:
     - npm run build
-    - sshpass -p $KIWI_PASSWORD scp -o StrictHostKeyChecking=no ./dist/* kiwi@jnsl.tk:/home/kiwi/kiwave
+    - sshpass -p $KIWI_PASSWORD scp -o StrictHostKeyChecking=no -r ./dist/* kiwi@jnsl.tk:/home/kiwi/kiwave
     - sshpass -p $KIWI_PASSWORD ssh -o StrictHostKeyChecking=no kiwi@jnsl.tk
     - sudo rm -r /var/www/kiwave/*
     - $KIWI_PASSWORD
