--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,12 +24,7 @@ build-job:
   # the commands of script are run on the Gitlab runner which works on Linux OS. We want to run the test files that have been written for the GUI
   script:
     - npm run build
-    - sshpass -p $KIWI_PASSWORD scp -o StrictHostKeyChecking=no -r ./dist/* kiwi@jnsl.tk:/home/kiwi/kiwave
-    - sshpass -p $KIWI_PASSWORD ssh -o StrictHostKeyChecking=no kiwi@jnsl.tk
-    - sudo rm -r /var/www/kiwave/*
-    - $KIWI_PASSWORD
-    - sudo mv ./kiwave/* /var/www/kiwave
-    - logout
+    - sshpass -p $KIWI_PASSWORD scp -o StrictHostKeyChecking=no -r ./dist/* kiwi@jnsl.tk:/var/www/kiwave
   # we want to deploy on the server only the parts that are merged with the main branch. In other words, when the commit source is the branch main
   rules:
     - if: '$CI_COMMIT_BRANCH == "Deployment"'
